--- a/bachEndSOEN6441project/twitter4j.properties
+++ b/bachEndSOEN6441project/twitter4j.properties
@@ -1,5 +1,5 @@
 debug=true
-oauth.consumerKey=<api-key-for-your-app>
-oauth.consumerSecret=<api-secret-for-your-app>
-oauth.accessToken=<access-token>
-oauth.accessTokenSecret=<access-token-secret>
+oauth.consumerKey=vqirgUFnKCZzGkax6uQH1pA0I
+oauth.consumerSecret=FtI7BSqvEymgdzTUGzG6CqFQRhuVS7CzE15sObwPgruOOFJ7Pt
+oauth.accessToken=253937296-6XAPjUESvIJ1djUuoKpYMJfcSdzKHG4FH8a30pfk
+oauth.accessTokenSecret=f75nGHgbXIpBzjPNn0B2tdj1MqTBcd2Du2f2I9w1vbUUJ
